Change Log for OpenXava project
===============================

- Fix: The tree editor ignores hierarchy and order.
- Fix: IllegalStateException (request object ... recycled) in log on saving preferences from time to time.
- Fix: Layout for groups side by side does not work correctly for flowLayout=true. 
- Fix: Bottom buttons mounted on view with flowLayout=true when we place two frames in same row. 
- Fix: Charts in list mode broken if user does a "Group by" after changing chart type.

OpenXava 7.4 (2024-9-13)
------------------------
- @Chart annotation for collections to display the collection as a chart from its data.
- @LargeDisplay annotation to display a property value in large format, with large fonts, spacing, etc.
- @SimpleList annotation for collections to display it without actions, filters, pagination, sorting, etc.
- Master-Detail archetypes include a dashboard and use @Calculation instead of calculated properties.
- The invoicedemo project includes a dashboard and uses @Calculation instead of calculated properties.
- Example of creating a dashboard in openxavatest with the StaffDashboard module.
- Popup menu for row actions in list and collections when there are more than two actions.
- New 'Open in new tab' row action by default in collections. 
- New delete action for collection that always deletes the element completely from the database.
- @DeleteSelectedAction annotation for collection to define a custom action for deleting an element.
- Icon and label for remove action in collection changed to indicate it just removes from the collection.
- New @NoDefaultActions annotation for not showing default actions for a specific collection.
- @RowStyle in @Tab(rowStyles=) for list mode works for card list format.
- As @DescriptionsList defaults, 'name' takes preferences over 'description', and 'title' is recognized.
- @SearchListCondition allows the use of ${this.somePropertyDisplayedInView} in the condition.