@@ -22,8 +22,7 @@ showIconForViewReadOnly=false
 alignedByColumns=false
 filterOnChange=true
 useIconsInsteadOfImages=true
-# tmr flowLayout=false
-flowLayout=true
+flowLayout=false
 showDefaultActionInBottom=true
 enterMovesToNextField=false
 #currencySymbol=$
